# osc-cc

./: .cproject  .gitignore  .project  Changelog  HISTORY  Makefile  Makefile_module  configure  configure.in  do-release
Classification/ImageMoments/: vchecker_desc.c
Classification/Labeling/: vchecker_labeling.c
Rendering/Overlay/: leanXoverlay.c
include/: leanXoverlay.h  vchecker_desc.h  vchecker_global.h  vchecker_labeling.h
include/vchecker/: vchecker_labeling.h
leanXoverlay/: leanXoverlay.c
modules/leanXoverlay/: leanXoverlay.c
modules/leancv/: .cproject  .gitignore  .project  DebayerBilinearBGR_host.c  DebayerBilinearBGR_target.asm  Makefile  bmp.c  debayer.c  detection.c  drawing.c  lcv.c  lcv_host.c  lcv_target.c
modules/leancv/include/: lcv_bmp.h  lcv_debayer.h  leancv.h
modules/vchecker/: vchecker_labeling.c
modules/vchecker/include/: vchecker_desc.h  vchecker_labeling.h
src/leanXoverlay/: leanXoverlay.c
src/vchecker/: vchecker_desc.c  vchecker_labeling.c
src/vchecker/include/: vchecker_desc.h
